--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Hernán Romano <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="https://www.linkedin.com/in/hromano/" target='_blank">Hernán Romano <span class="sr-only">(current)</span></a>
                 </li>
                 
                 </ul>
