--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
 
                 <div class="col-md-4">
                   <div class="thumbnail">
-                    <a href="libros.html">
-                      <img src="proyectos/libros/libros-tapa.jpg" alt="Libros" style="width:100%"></a>
+                    <a href="carrito.html">
+                      <img src="proyectos/carrito/carrito-tapa.jpg" alt="Carrito" style="width:100%"></a>
                       <div class="caption">
-                        <p style="text-align:center">Demo sistema libros</p>
+                        <p style="text-align:center">Carrito de compras</p>
                         <p style="text-align:center">
                             <i class="fab fa-html5"></i>
                             <i class="fab fa-css3-alt"></i>
@@ -247,12 +247,34 @@
                             <i class="fas fa-database"></i> 
                             </p>
                       </div>
-                    
                   </div>
                 </div>
               </div>
 
+                    <!-- Segunda linea de proyectos -->
+              
                 <div class="row">
+
+                    <div class="col-md-4">
+                        <div class="thumbnail">
+                          <a href="libros.html">
+                            <img src="proyectos/libros/libros-tapa.jpg" alt="Libros" style="width:100%"></a>
+                            <div class="caption">
+                              <p style="text-align:center">Demo sistema libros</p>
+                              <p style="text-align:center">
+                                  <i class="fab fa-html5"></i>
+                                  <i class="fab fa-css3-alt"></i>
+                                  <i class="fab fa-js"></i>
+                                  <i class="fab fa-bootstrap"></i>
+                                  <i class="fab fa-php"></i>
+                                  <i class="fas fa-database"></i> 
+                                  </p>
+                            </div>
+                        </div>
+                      </div>
+
+
+
                     <div class="col-md-4">
                       <div class="thumbnail">
                         <a href="lacroze.html">
